--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <script>
         // ฟังก์ชันสำหรับเปิดลิงก์ใหม่เมื่อคลิกปุ่ม
         document.getElementById('save-button').addEventListener('click', function() {
-            window.location.href = 'https://sne-narawadee.github.io/ATSGDailyRpt_LIX02';
+            window.location.href = 'https://sne-narawadee.github.io/eATSGDailyRpt_LIX02';
         });
 
         // รอ 3 วินาที (3000 มิลลิวินาที) แล้วทำให้ปุ่มค่อยๆ ปรากฏ
@@ -59,7 +59,7 @@
             setTimeout(function() {
                 console.log('Timer completed. Showing button.');
                 document.getElementById('save-button').style.opacity = 1;
-            }, 3000); // 3000 มิลลิวินาที = 3 วินาที
+            }, 5000); // 3000 มิลลิวินาที = 3 วินาที
         };
     </script>
 </body>
