--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <iframe
       id="app"
-      src="https://script.google.com/macros/s/AKfycbypJMvdG1vkU4dK4xk6Hu_tULRsZCl_tfI0UwsYk5AsIo-3gLnf8MFqcVCmVPNgS9VptQ/exec"
+      src="https://script.google.com/macros/s/AKfycbzoyNZycsFWsRwd_OdZ9NLvQ1mjIHkKEUp9-LPELz9prJeNTnFPk67kcnCuGcq-fxd3/exec"
       allow="geolocation"
       frameborder="0"
       scrolling="no">
@@ -50,7 +50,7 @@
     <script>
         // ฟังก์ชันสำหรับเปิดลิงก์ใหม่เมื่อคลิกปุ่ม
         document.getElementById('save-button').addEventListener('click', function() {
-            window.location.href = 'https://sne-narawadee.github.io/eATSGDailyRpt_LIX02';
+            window.location.href = 'https://sne-narawadee.github.io/eATSUGDailyRpt_LIX02';
         });
 
         // รอ 5 วินาที (5000 มิลลิวินาที) แล้วทำให้ปุ่มค่อยๆ ปรากฏ
